@@ -7,6 +7,7 @@ cgrates (1.0) UNRELEASED; urgency=medium
   * [AttributeS] Added any_context config to control the matching attributes
   * [DispatcherS] Added any_subsyste config to control the matching dispatchers
   * [StatS] AverageCallCost and TotalCallCost now returns error for negative Cost field
+  * [SessionS] The sessions are no longer terminated on shutdown if the replication_conns are set
 
  -- DanB <danb@cgrates.org>  Thu, 4 May 2021 12:05:00 +0200
 
